# aegis-orchestrator

./: .gitignore  .gitmodules  .guardianignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  SECURITY.md  guardian.yaml  install.sh  runtime-registry.yaml
cli/: Cargo.toml  README.md
cli/migrations/: 001_initial.sql  001_temporal_era.sql  002_add_parent_execution_id.sql  002_create_volumes_table.sql  002_rate_limiting.sql  003_admin_audit_log.sql  003_create_storage_events_table.sql  004_execution_security_context.sql  004_workflow_execution_events.sql  005_add_description_tags.sql  006_agent_version_history.sql  007_agent_scope.sql  008_api_keys.sql  009_remove_tags.sql  010_identity_realms.sql  011_credential_bindings.sql  012_volume_owner_user_id.sql  013_registered_nodes.sql  014_volume_host_node.sql  015_storage_events_workflow_execution.sql  016_execution_initiating_user_sub.sql  017_tenant_subscriptions.sql  018_api_key_identity.sql  019_git_repo_bindings.sql  020_canvas_sessions.sql  021_scripts.sql  022_teams.sql  023_canvas_session_name_archived.sql  024_colony_tier_cleanup.sql  025_billing_user_sub.sql  026_drop_tenants_tier_and_quotas.sql  027_execution_events_local_sequence.sql  028_execution_events_drop_fk.sql  029_edge_mode.sql  030_cluster_enrolment_tokens.sql  031_webhook_secret_encryption.sql  032_edge_display_name.sql
cli/src/: embedded.rs  lib.rs  main.rs  output.rs
cli/src/auth/: device_flow.rs  env.rs  mod.rs  profile.rs  refresh.rs
cli/src/commands/: agent.rs  auth.rs  builtins.rs  config.rs  credential.rs  daemon.rs  down.rs  fuse_daemon.rs  mod.rs  node.rs  restart.rs  secret.rs  status.rs  task.rs  uninstall.rs  up.rs  update.rs  workflow.rs
cli/src/commands/edge/: bootstrap.rs  client.rs  daemon.rs  enroll.rs  fleet.rs  group.rs  grpc.rs  handshake.rs  host_detection.rs  keys.rs  logout.rs  ls.rs  mod.rs  selector.rs  service.rs  status.rs  tag.rs  token.rs
cli/src/commands/init/: components.rs  compose.rs  configure.rs  download.rs  examples.rs  mod.rs  prereqs.rs  verify.rs
cli/src/daemon/: billing_service.rs  client.rs  cluster_helpers.rs  container_helpers.rs  edge_lifecycle.rs  install.rs  log_sanitize.rs  mod.rs  operator_read_models.rs  ports.rs  relay_server.rs  router.rs  server.rs  state.rs  temporal_helpers.rs  worker_lifecycle.rs
cli/src/daemon/handlers/: admin.rs  agents.rs  api_keys.rs  approvals.rs  billing.rs  canvas.rs  cluster.rs  colony.rs  consumer.rs  cortex.rs  credentials.rs  dispatch.rs  executions.rs  git_repo.rs  health.rs  mod.rs  observability.rs  script.rs  seal.rs  smcp.rs  stimulus.rs  swarms.rs  tenant_provisioning.rs  volumes.rs  workflow_executions.rs  workflows.rs
cli/src/util/: attachments.rs  mod.rs
cli/templates/: aegis-edge.nssm.json  aegis-edge.service  aegis.service  config-minimal-fail.yaml  config-minimal.yaml  config-with-examples.yaml  edge-config-minimal.yaml  edge-config-with-examples.yaml  io.aegis.daemon.plist  io.aegis.edge.plist
cli/templates/agents/: aegis-bash-executor-agent.yaml  aegis-code-validator-agent.yaml  aegis-javascript-executor-agent.yaml  aegis-output-formatter-agent.yaml  aegis-python-executor-agent.yaml  agent-creator-agent.yaml  agent-generator-judge.yaml  code-quality-judge.yaml  hello-world-agent.yaml  intent-executor-discovery-agent.yaml  intent-result-formatter-agent.yaml  skill-validator.yaml  tool-call-policy-judge.yaml  workflow-creator-validator-agent.yaml  workflow-generator-judge.yaml  workflow-generator-planner-agent.yaml
cli/templates/stack/: docker-compose.yml  init-multiple-dbs.sh  runtime-registry.yaml  seal-gateway-config.yaml  smcp-gateway-config.yaml
cli/templates/workflows/: builtin-intent-to-execution.yaml  builtin-workflow-generator.yaml  skill-import.yaml
cli/tests/: edge_clap_smoke.rs  edge_enroll_e2e.rs
cortex/: Cargo.toml  KNOWN_ISSUES.md
cortex/src/: lib.rs
cortex/src/application/: cortex_pruner.rs  cortex_service.rs  mod.rs
cortex/src/domain/: events.rs  graph.rs  mod.rs  pattern.rs  skill.rs
cortex/src/infrastructure/: embedding_client.rs  graph_store.rs  lancedb_repo.rs  lancedb_store.rs  mod.rs  qdrant_repo.rs  qdrant_repository.rs  qdrant_store.rs  repository.rs
orchestrator/core/: Cargo.toml  README.md  build.rs
orchestrator/core/src/: agent.rs  lib.rs  memory.rs  runtime.rs  security.rs  swarm.rs
orchestrator/core/src/api/: mod.rs
orchestrator/core/src/application/: agent.rs  agent_scope.rs  attestation_service.rs  billing_service.rs  canvas_service.rs  complete_workflow_execution.rs  correlated_activity_stream.rs  credential_service.rs  discovery_service.rs  effective_tier_service.rs  execution.rs  execution_event_persister.rs  file_operations_service.rs  git_clone_executor.rs  git_repo_service.rs  git_ssh_key.rs  inner_loop_service.rs  lifecycle.rs  mod.rs  nfs_gateway.rs  output_handler_service.rs  (+25 more)
orchestrator/core/tests/: agent_domain_tests.rs  canvas_api_tests.rs  canvas_domain_tests.rs  canvas_git_write_tests.rs  consensus_strategy_tests.rs  credential_service_oauth_tests.rs  domain_events_tests.rs  edge_mode.rs  edge_mode_grpc.rs  execution_domain_tests.rs  git_clone_executor_tests.rs  git_repo_api_tests.rs  git_repo_domain_tests.rs  git_repo_service_tests.rs  input_schema_validation_tests.rs  judge_recursion_tests.rs  nfs_gateway_integration_tests.rs  output_handler_deferred_test.rs  recursive_execution_tests.rs  script_api_tests.rs  script_domain_tests.rs  script_service_tests.rs  security_seal_domain_tests.rs  security_smcp_domain_tests.rs  stimulus_cluster_domain_tests.rs  temporal_integration_test.rs  temporal_mapper_tests.rs  tenant_scoped_validator_tests.rs  validation_event_tests.rs  volume_domain_tests.rs  workflow_domain_tests.rs  workflow_execution_postgres_contract.rs  workflow_handler_tenant_isolation.rs  workflow_integration_tests.rs  workflow_postgres_registration_contract.rs
orchestrator/swarm/: Cargo.toml  README.md
orchestrator/swarm/src/: lib.rs
sdks/: Cargo.toml  README.md
sdks/src/: client.rs  lib.rs  manifest.rs  types.rs
(+340 files in other folders)
