[workspace]
resolver = "2"
members = [
    "orchestrator/core",
    "orchestrator/swarm",
    "cortex",
    "sdks",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["AEGIS Core Team"]
license = "AGPL-3.0"
repository = "https://github.com/100monkeys-ai/aegis-orchestrator"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
sled = "0.34"

# Containerization
bollard = "0.17"  # Docker API

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha2 = "0.10"
blake3 = "1.5"

# Networking
reqwest = { version = "0.12", features = ["json"] }

# Utilities
bytes = "1.7"
futures = "0.3"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
