[workspace]
resolver = "2"
members = [
    "orchestrator/core",
    "orchestrator/swarm",
    "sdks",
    "cli",
]

[workspace.package]
version = "0.13.0-pre-alpha"
edition = "2021"
rust-version = "1.88"
authors = ["100monkeys AI, Inc."]
license = "AGPL-3.0"
repository = "https://github.com/100monkeys-ai/aegis-orchestrator"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.50", features = ["full"] }
tokio-util = "0.7"

# Web Framework
axum = "0.8.8"
tower = "0.4"
tower-http = "0.6"
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
sled = "0.34"

# Containerization
bollard = "0.20"  # Docker API

# Error Handling
anyhow = "1.0"
thiserror = "2.0.18"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.27", features = ["logs"] }
opentelemetry_sdk = { version = "0.27", features = ["logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["logs", "grpc-tonic", "http-proto", "tls", "tls-roots"] }
opentelemetry-appender-tracing = { version = "0.27" }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }

# CLI
clap = { version = "4.6", features = ["derive", "cargo"] }

# UUID
uuid = { version = "1.22", features = ["v4", "v5", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha2 = "0.10"
blake3 = "1.5"

# Networking
reqwest = { version = "0.13", features = ["json"] }

# NFS Server
nfsserve = "0.10"
bincode = "1"

# gRPC
tonic = "0.14"
prost = "0.14"

# Utilities
bytes = "1.7"
futures = "0.3"
async-trait = "0.1"

# Code Quality
rust-guardian = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
