[package]
name = "aegis-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "100monkeys.ai AEGIS orchestrator CLI and daemon"
readme = "README.md"

[lib]
name = "aegis_orchestrator"
path = "src/lib.rs"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
colored = "2.1"
indicatif = "0.18"
dialoguer = "0.11"
which = "8"
dirs-next = "2"

# Async runtime
tokio = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# HTTP client for daemon delegation
reqwest = { version = "0.13", features = ["json", "stream"] }
axum = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Types and errors
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Docker client (needed to construct DockerContainerStepRunner in daemon)
bollard = { workspace = true }

# Internal [dependencies]
aegis-orchestrator-core = { path = "../orchestrator/core", version = "0.7.0-pre-alpha" }
aegis-orchestrator-sdk = { path = "../sdks", version = "0.7.0-pre-alpha" }
jsonwebtoken = "10.3.0"
base64 = "0.22.1"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"

# Platform-specific daemon support
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
