[package]
name = "aegis-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "100monkeys.ai AEGIS orchestrator CLI and daemon"
readme = "README.md"

[lib]
name = "aegis_orchestrator"
path = "src/lib.rs"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.6", features = ["derive", "cargo", "env"] }
colored = "3.1.1"
indicatif = "0.18"
dialoguer = "0.12.0"
which = "8.0.2"
dirs-next = "2"

# Async runtime
tokio = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# HTTP client for daemon delegation
reqwest = { version = "0.13", features = ["json", "stream", "form"] }
axum = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Types and errors
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Environment file loading (.env)
dotenvy = "0.15"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
# Docker client (needed to construct DockerContainerStepRunner in daemon)
bollard = { workspace = true }

# Internal [dependencies]
aegis-orchestrator-core = { path = "../orchestrator/core", version = "0.15.0-pre-alpha" }
aegis-orchestrator-swarm = { path = "../orchestrator/swarm", version = "0.15.0-pre-alpha" }
aegis-orchestrator-sdk = { path = "../sdks", version = "0.15.0-pre-alpha" }
async-trait = "0.1"
jsonwebtoken = "10.3.0"
base64 = "0.22.1"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
keyring = "3"
aes-gcm = "0.10"
tonic = { workspace = true }
prost = { workspace = true }
parking_lot = { workspace = true }

# Stripe billing (optional at runtime — feature-gated by STRIPE_SECRET_KEY env)
stripe = { package = "async-stripe", version = "0.39", features = ["runtime-tokio-hyper-rustls"] }

# Platform-specific daemon support
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
