[package]
name = "aegis-cortex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow.workspace = true
async-trait = "0.1"
regex = "1.10"
once_cell = "1.19"

# Vector store and graph database
qdrant-client = "1.7"
neo4rs = "0.7"

# gRPC for embedding service
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = "0.13"



