[package]
name = "aegis-sdk"
version = "0.1.0"
edition = "2021"
authors = ["AEGIS Core Team"]
license = "Apache-2.0"
description = "Rust SDK for building AEGIS agents"
repository = "https://github.com/aent-ai/aegis-greenfield"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
