[package]
name = "aegis-sdk"
version = "0.1.0"
edition = "2021"
authors = ["AEGIS Core Team"]
license = "AGPL-3.0"
description = "Rust SDK for building AEGIS agents"
repository = "https://github.com/100monkeys-ai/aegis-greenfield"

[dependencies]
aegis-core = { path = "../orchestrator/core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
