[package]
name = "aegis-orchestrator-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for building 100monkeys.ai AEGIS agents"
readme = "README.md"

[dependencies]
aegis-orchestrator-core = { path = "../orchestrator/core", version = "0.12.0-pre-alpha" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0.18"

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
