[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
uuid = { workspace = true }
chrono = { workspace = true }
humantime-serde = "1.1"
thiserror = { workspace = true }
anyhow = { workspace = true }
handlebars = "5.1"
async-trait = "0.1"
futures = { workspace = true }
sha2 = "0.10"
bollard.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
tracing.workspace = true
axum.workspace = true
tokio-stream = "0.1.18"
tower-http.workspace = true
hostname = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2.4"
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
prost-types = "0.13"
tar = "0.4"

# Cortex (Learning & Memory)
aegis-cortex = { path = "../../cortex" }

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.13"
protoc-bin-vendored = "3.0"
