[package]
name = "aegis-orchestrator-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain and runtime primitives for the 100monkeys.ai AEGIS orchestrator"
readme = "README.md"

# Include proto-vendor in published packages (created by CI)
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "build.rs",
    "proto-vendor/**/*.proto",
]

[dependencies]
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
uuid = { workspace = true }
chrono = { workspace = true }
humantime-serde = "1.1"
thiserror = { workspace = true }
anyhow = { workspace = true }
handlebars = "6.4"
async-trait = "0.1"
futures = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2.6"
dashmap = "6"
governor = { version = "0.10", features = ["std", "dashmap"] }
bollard.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tracing.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
axum.workspace = true
tower.workspace = true
tokio-stream = "0.1.18"
tokio-util = "0.7"
tower-http.workspace = true
hostname = "0.4"
dirs = "6.0"
reqwest = { version = "0.13", features = ["json", "multipart", "query", "form"] }
walkdir = "2.4"
aegis_orchestrator_proto = { path = "../../../aegis-proto", package = "aegis-orchestrator-proto", version = "0.15.0-pre-alpha" }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
prost-types = "0.14"
tonic-prost = "0.14"
tar = "0.4"
regex = "1"
jsonschema = "0.45.0"

# NFS Server Gateway (ADR-036)
nfsserve = { workspace = true }
bincode = { workspace = true }
parking_lot = "0.12"

# FUSE FSAL Transport (ADR-107)
fuser = "0.15"
libc = "0.2"

url = "2.5.8"
scraper = "0.25.0"
html2md = "0.2"
urlencoding = "2.1"

# Cryptography & Security (SEAL)
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
opendal = "0.55.0"
vaultrs = "0.7"

# Secrets Manager (ADR-034)
lru = "0.16"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27"
mockito = "1"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
